# python-ci

./: docker-compose.yml  pyproject.toml
docker/local/: Dockerfile  start
