[tool]
[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
include = '\.pyi?$'
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
authors = ["Dopple <info@thedopple.com>"]
description = "Backend for Dopple"
name = "dopple"
version = "0.0.0"

[tool.poetry.dependencies]
Django = ">=4,<5"
Pillow = "^9.1.1"
ShopifyAPI = "==11.0.0"
appoptics-apm = "*"
boto3 = "1.23.4"
celery = {version = ">=5.0,<6.0", extras = ["redis"]}
coreapi = "==2.3.3"
dj-database-url = "==0.4.2"
django-anymail = "==8.5"
django-auditlog = "^2.0.0"
django-bmemcached = "*"
django-cache-memoize = "*"
django-constance = {extras = ["database"], version = "^2.9.0"}
django-cors-headers = "==3.11.0"
django-db-geventpool = "==4.0.0"
django-extensions = "^3.1.5"
django-filter = "==21.1"
django-formtools = "*"
django-fsm = "*"
django-import-export = "==2.7.1"
django-ipware = "*"
django-localflavor = "==3.1"
django-model-choices = "*"
django-model-utils = "==4.2.0"
django-pipeline = "^2.0.8"
django-request-token = "==0.16.1"
django-sendgrid-v5 = "==1.2.0"
django-storages = "==1.12.3"
django-celery-beat = { git = "https://github.com/celery/django-celery-beat.git", rev = "fa73034be892052893e4ef17926ef3a5d4a21ea2" }
djangorestframework = "==3.13.1"
drf-nested-routers = "*"
gevent = "^21.12.0"
gunicorn = "==20.0.4"
holidays = "*"
importlib-metadata = "*"
ipython = "<7.17.0"
klaviyo = "==2.0.4"
kombu = ">=5.2.2,<6.0"
kount-ris-sdk = "==3.0.2"
pdfrw = "*"
psycopg2 = "~=2.8.3"
pylibmc = "*"
python = "3.10.5"
python-binary-memcached = "*"
python-dateutil = "==2.7.3"
python-decouple = "==3.1"
python-jose = "3.3.0"
pytz = "==2020.4"
redis = ">=3.2.0"
requests = ">=2.20.0"
sentry-sdk = "^1.5.12"
shippo = "2.1.2"
shortid = "*"
simplejson = "==3.16.0"
social-auth-app-django = "5"
sorl-thumbnail = "==12.8.0"
stripe = "==2.28.1"
tablib = ">=3.0.0"
twilio = "*"
usaddress-scourgify = "==0.2.4"
uszipcode = "*"
whitenoise = "==5.3.0"
xmltodict = "*"
psycopg2-binary = "^2.9.3"
mock = "4.0.3"
types-requests = "^2.27.20"
types-pytz = "^2021.3.6"
types-mock = "^4.0.13"
types-python-dateutil = "^2.8.12"
django-picklefield = "^3.0.1"
django-waffle = "^2.4.1"
greenlet = "^1.1.2"
django-silk = "^4.4.0"
django-push-notifications = {extras = ["WP"], version = "^3.0.0"}
pywebpush = "^1.14.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
django-debug-toolbar = "==3.2.4"
factory-boy = "<3.0.0"
flake8 = "^4.0.1"
freezegun = "*"
ipdb = "*"
mypy = "*"
nplusone = "*"
pre-commit = "*"
pympler = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-mock = "*"
pytest-xdist = "*"
requests-mock = "*"
Werkzeug = "<2.1"
click = "==8.0.2"
django-upgrade = "^1.7.0"
isort = "^5.10.1"
bandit = "^1.7.4"
safety = "^1.10.3"
